[package]
name = "qr-base44"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["kookyleo <kookyleo@gmail.com>"]
description = "Base44 encode/decode for arbitrary bytes using URL-safe QR-compatible alphabet"
license = "Apache-2.0"
repository = "https://github.com/kookyleo/qr-base44"
readme = "README.md"
keywords = ["base44", "qr", "encoding", "url-safe"]
categories = ["encoding", "no-std"]

[dependencies]
thiserror = "1"

[features]
# Optional no_std support without alloc is difficult since String/Vec are required.
# We keep std by default and allow "alloc" only builds if needed later.
default = []
